--- a/Itsho.AoC2016/Itsho.AoC2016.csproj
+++ b/Itsho.AoC2016/Itsho.AoC2016.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\Day01Solution.cs" />
+    <Compile Include="Solutions\Day02Solution.cs" />
     <Compile Include="Tests\Tester.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +60,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="RiddleSources\Day02.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="RiddleSources\Day01.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
