prepare to day 06

--- a/Itsho.AoC2016/Itsho.AoC2016.csproj
+++ b/Itsho.AoC2016/Itsho.AoC2016.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Solutions\Day01Solution.cs" />
     <Compile Include="Solutions\Day02Solution.cs" />
     <Compile Include="Solutions\Day03Solution.cs" />
+    <Compile Include="Solutions\Day06Solution.cs" />
     <Compile Include="Solutions\Day05Solution.cs" />
     <Compile Include="Solutions\Day04Solution.cs" />
     <Compile Include="Tests\Tester.cs" />
@@ -63,6 +64,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="RiddleSources\Day06.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="RiddleSources\Day05.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
